# cues_media_player

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  Makefile  README.md  cues_media_player.jucer  requirements.txt
.github/workflows/: cmake.yml
JuceLibraryCode/: AppConfig.h  BinaryData.cpp  BinaryData.h  JuceHeader.h
Src/: ControlPannelMessage.cpp  ControlPannelMessage.h  Cue.cpp  Cue.h  CueComponent.h  CueComponents.cpp  CueTypes.h  ExternalInfo.cpp  ExternalInfo.h  GotoComponent.cpp  GotoComponent.h  MTCSender.cpp  MTCSender.h  Main.cpp  MainComponent.cpp  MainComponent.h  Settings.h  SettingsWindow.cpp  SettingsWindow.h  SliderComponent.cpp  SliderComponent.h  Timecode.cpp  Timecode.h  UIModules.cpp  UIModules.h  Video.cpp  Video.h  VideoMessage.cpp  VideoMessage.h  main.cpp
resources/images/: Logo.ai
